2008-02-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/util/prefs/EventDispatcher.java:
	Re-added.
	* gnu/java/util/prefs/GConfBasedPreferences.java,
	* gnu/java/util/prefs/gconf/GConfNativePeer.java,
	* java/util/prefs/AbstractPreferences.java,
	* native/jni/gconf-peer/GConfNativePeer.c:
	Regress to 0.96 versions.

2008-02-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/net/URI.java:
	(compareTo(URI)): Change comparison sign so it
	operates in the correct direction.
	
2008-02-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* m4/acinclude.m4:
	Remove check for gcjh.
	* m4/ac_prog_javac.m4:
	Check for ecj-3.2 and ecj-3.3, and add
	-Xlint:unchecked for javac.
	
2008-02-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/javax/management/Translator.java:
	(fromJava(Object[],Method)): Don't cast to Class<?>.
	(fromJava(Object,Type)): Use ParameterizedType
	and don't assume that List will work for Sets.
	
2008-02-21  David Walluck  <david@jpackage.org>

	PR classpath/27204:
	* m4/acinclude.m4:
	(REGEN_WITH_JAY): Handle 'yes' as a default,
	not a directory and give more user-friendly output.
	
2008-02-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/util/regex/REException.java:
	(REException(String,Throwable,int,int)): Added
	constructor which also includes the cause.
	* gnu/java/util/regex/RETokenNamedProperty.java:
	(getHandler(String)): Add support for \p{javaX}.
	(JavaCategoryHandler): New class.
	
2008-02-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/35274:
	* m4/acinclude.m4:
	Increase maximum heap size to 768mb.

2008-02-21  Roman Kennke  <kennke@aicas.com>

	* java/awt/image/PixelInterleavedSampleModel.java
	(createCompatibleSampleModel): Adjust scanline stride for new
	width and optimize band offsets.

2008-02-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        PR classpath/35111:
	* resource/com/sun/tools/javac/messages.properties,